Resources in parent

--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -16,6 +16,11 @@
     </parent>
 
     <build>
+        <resources>
+            <resource>
+                <directory>../Parent/resources/</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
