--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -17,6 +17,11 @@
     </parent>
 
     <build>
+        <resources>
+            <resource>
+                <directory>../Parent/resources/</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
