--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <junit-jupiter-api.version>5.4.2</junit-jupiter-api.version>
-        <log4j-core.version>2.11.2</log4j-core.version>
+        <log4j.version>1.2.17</log4j.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
@@ -70,9 +70,9 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>${log4j-core.version}</version>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
