--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -10,10 +10,12 @@
     <properties>
         <junit-jupiter-api.version>5.4.2</junit-jupiter-api.version>
         <log4j.version>1.2.17</log4j.version>
+        <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <server>localhost</server>
+        <port>1234</port>
     </properties>
 
     <build>
@@ -29,31 +31,20 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${maven-jar-plugin.version}</version>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven-assembly-plugin.version}</version>
                     <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <classpathPrefix>lib/</classpathPrefix>
-                            </manifest>
-                        </archive>
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>${maven-dependency-plugin.version}</version>
                     <executions>
                         <execution>
-                            <id>copy</id>
+                            <id>make-assembly</id>
                             <phase>package</phase>
                             <goals>
-                                <goal>copy-dependencies</goal>
+                                <goal>single</goal>
                             </goals>
-                            <configuration>
-                                <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
@@ -76,6 +67,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
 
     <modules>
         <module>..\Server</module>
