--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -19,6 +19,7 @@
         <resources>
             <resource>
                 <directory>../Parent/resources/</directory>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <plugins>
@@ -28,11 +29,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
