--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -37,6 +37,7 @@
                             <mainClass>fr.dauphine.ar.application.ClientMain</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>PacmanClient</finalName>
                 </configuration>
             </plugin>
         </plugins>
