--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -12,6 +12,7 @@
         <log4j.version>1.2.17</log4j.version>
         <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <server>localhost</server>
@@ -45,6 +46,17 @@
                             <goals>
                                 <goal>single</goal>
                             </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>default-jar</id>
+                            <phase/>
                         </execution>
                     </executions>
                 </plugin>
