--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -80,6 +80,13 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+    </dependencies>
 
     <modules>
         <module>..\Server</module>
