--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -8,13 +8,17 @@
     <name>MultiplayerPacman</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!--Dependencies versions-->
+        <commons-cli.version>1.4</commons-cli.version>
         <junit-jupiter-api.version>5.4.2</junit-jupiter-api.version>
         <log4j.version>1.2.17</log4j.version>
         <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <!--Network properties-->
         <server>localhost</server>
         <port>1234</port>
     </properties>
@@ -77,16 +81,13 @@
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${commons-cli.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
-        </dependency>
-    </dependencies>
 
     <modules>
         <module>..\Server</module>
