--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -4,7 +4,7 @@
     <groupId>fr.dauphine.ar</groupId>
     <artifactId>Parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>MultiplayerPacman</name>
 
     <properties>
